--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,6 +19,24 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   /* color: #362222; */
 }
+
+/********************SECTIONS********************/
+.white-section {
+  background-color: white;
+  padding: 5% 15%;
+}
+
+.green-section {
+  background-color: #91db65;
+  padding: 5% 15%;
+}
+
+.division-img {
+  width: 100%;
+}
+
+/****** ******/
+
 .title
 {
   background-color: #91db65;
@@ -39,20 +57,23 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
-.division-img {
-  width: 100%;
-}
-
 .container-fluid {
   padding-left: 0;
   padding-right: 0;
 }
 
-.white-section {
-  background-color: white;
-  padding: 5% 15%;
+.big-title{
+  font-size: 3rem;
+  margin-bottom: 5%;
 }
 
+.med-title {
+  font-size: 2rem;
+  margin-bottom: 10%;
+}
+
+
+/*************PROJECT SECTION ***************/
 .project-card {
   margin: 5% 5% 5% 0;
 }
@@ -73,11 +94,22 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1rem;
 }
 
-.project-title{
-  font-size: 3rem;
-  margin-bottom: 5%;
+.project-picture {
+  width: 100%;
+    height: 15vw;
+    object-fit: cover;
 }
+
+
 
 .project-col {
   padding-bottom: 5%;
+}
+
+
+/*************ABOUT SECTION ***************/
+
+.about-image {
+  width: 100%;
+  border-radius: 0 10% 20% 10%;
 }
